[package]
name = "russh-transport"
version = "0.1.0"
license = "MIT/Apache-2.0"
keywords = ["ssh", "transport", "network", "russh"]
edition = "2018"

[features]
default = ["default-algorithms"]

default-algorithms = ["russh-algorithms"]

[dependencies]
russh-definitions = { path = "../definitions" }
russh-algorithms = { path = "../algorithms", optional = true }
num-bigint = "0.4"
tokio = { version = "0.2", features = ["io-util"] }
rand = "0.7"
rand_distr = "0.2"
thiserror = "1.0"
static_assertions = "1.0"

[dev-dependencies]
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
rand_chacha = "0.2.1"
sha2 = "0.8"
tokio = { version = "0.2", features = ["macros", "rt-core", "tcp", "process", "io-util", "time"] }
ed25519-dalek = "1.0"
mktemp = "0.4"
quale = "1.0"
portpicker = "0.1"
